# webrtc-engineering

./: .gitignore  .markdownlint-cli2.yaml  .markdownlint.json  .prettierignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  agent-guard.markdownlint-cli2.yaml  eslint.config.js  lychee.toml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.archive/: folderstructure.txt
.claude/: README.md
.cursor/: skills.md
.cursor/agents/: ml-topic-bundle-review.md  ml-zero-copy-review.md  webrtc-ci-verify.md  webrtc-demo-review.md  webrtc-zero-copy-review.md
.cursor/rules/: 00_swamy_personal_learning_only.mdc  01_educational-content-rules.mdc  02_repository-structure.mdc  03_quality-assurance.mdc  04_markdown-standards.mdc  05_primary-directives.mdc  06_source_material_rules.mdc  07_file-naming-conventions.mdc  08_copilot-instructions-extract.mdc  README.md
.cursor/skills/: README.md
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  content_improvement.md  feature_request.md
.github/agents/: ml-ci-verify.md  webrtc-ci-verify.md  webrtc-demo-review.md  webrtc-topic-bundle-review.md
.github/prompts/: smart-prompt-framework-guide.md  task-prompt.md
.github/reviews/: README.md
.github/skills/: README.md
.github/workflows/: ci-agent-docs-guard.yml  ci-documentation.yml  ci-node.yml  ci-python.yml  ci-skills-parity.yml
docs/: 01-repository-structure.md  agent-governance-recovery.md  agent-skills.md  agent-subagents.md
src/: README.md
tools/: README.md
types/: global.d.ts
(+69 files in other folders)
