[project]
name = "webrtc-engineering-tools"
version = "0.1.0"
description = "Maintenance scripts for the webrtc-engineering repository"
readme = "README.md"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "black>=24.0.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
]

[tool.black]
line-length = 127
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 127
